# mimir

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  DOCKER_HUB_README.md  DOCKER_HUB_SETUP.md  Dockerfile.allinone  LICENSE  README.md  docker-compose.yml  index.html  install.html  install.sh  mimir  package-lock.json  package.json  sitemap.xml
.github/: FUNDING.yml
brand/: preview.html
docker/allinone/: entrypoint.sh  nginx.conf
docs/: architecture.md  v1-readme.md
mimir-backend/: .coderabbit.yaml  .dockerignore  .gitattributes  .gitignore  .releaserc.json  AGENT.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.yml  mkdocs.yml  pom.xml
mimir-backend/compatibility-tests/sdk-test-rust/: Cargo.toml  Dockerfile  README.md
mimir-backend/compatibility-tests/sdk-test-rust/.config/: nextest.toml
mimir-backend/compatibility-tests/sdk-test-rust/src/: lib.rs
mimir-backend/compatibility-tests/sdk-test-rust/tests/: acm_test.rs  cloudformation_test.rs  cloudwatch_test.rs  cognito_test.rs  dynamodb_test.rs  iam_test.rs  kinesis_test.rs  kms_test.rs  lambda_test.rs  neptune_test.rs  pipes_test.rs  s3_cors_test.rs  s3_notifications_test.rs  s3_test.rs  secretsmanager_test.rs  sns_test.rs  sqs_test.rs  ssm_test.rs  sts_test.rs
mimir-backend/compatibility-tests/sdk-test-rust/tests/common/: mod.rs
mimir-backend/docker/: Dockerfile  (+8 more)
mimir-duck/: package.json  server.js
server/: Dockerfile  package.json
web/: Dockerfile  index.html  nginx.conf  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
(+1568 files in other folders)
